# basic_rag

./: main.py  pyproject.toml
data/: 1.txt  2.txt
